src/test/resources/30/single/xhtml/valid/issue341.xhtml
<html xmlns="http://www.w3.org/1999/xhtml">
  <head>
    <title>HTML5 date type</title>
  </head>
  <body>
    <time datetime="2014-03">March 2014</time>
   </body>
</html>