src/test/resources/30/single/xhtml/invalid/time-in-time.xhtml
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml">
  <head lang="en">
    <meta charset="UTF-8"/>
    <title>Document</title>
  </head>
  <body>
    <time>
      <time>...</time>
    </time>
  </body>
</html>